# NovaLink-VPN

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  info_folders_names  readme.md  server.crt  server.key
.github/workflows/: cpp-build.yml
client/: CMakeLists.txt  main.cpp
client/discovery/: fetcher.hpp
client/internal/outbound/: ConfigLoader.hpp  fetcher.cpp  vless_reality.cpp  vless_reality.h  vless_reality.hpp
client/internal/tun/: TunHandler.cpp  TunHandler.hpp
configs/: client.conf  server.conf
core/: CMakeLists.txt
core/include/: EpollEngine.hpp  NetlinkCommander.hpp  RouteManager.hpp  protocol.h
manager/: ManagerAPI.hpp
manager-api/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
